--- a/src/index.css
+++ b/src/index.css
@@ -23,4 +23,10 @@
 body{
   font-family: "Open Sans", sans-serif;
   font-optical-sizing: auto;
+  text-decoration: none;
+
+}
+
+li{
+  list-style-type: none;
 }
